@@ -1,9 +1,13 @@
 package dtool.ast.expressions;
 
+import java.util.Collection;
+
 import dtool.ast.ASTCodePrinter;
 import dtool.ast.ASTNodeTypes;
 import dtool.ast.IASTVisitor;
+import dtool.ast.definitions.INamedElement;
 import dtool.ast.references.Reference;
+import dtool.resolver.api.IModuleResolver;
 
 public class ExpCast extends Expression {
 	
@@ -31,6 +35,11 @@ public class ExpCast extends Expression {
 		cp.append("cast");
 		cp.append("(", type, ")");
 		cp.append(exp);
+	}
+	
+	@Override
+	public Collection<INamedElement> findTargetDefElements(IModuleResolver mr, boolean findFirstOnly) {
+		return findTargetElementsForReference(mr, type, findFirstOnly);
 	}
 	
 }
